# devgrid-pychallenge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.py
app/: __init__.py  constants.py  service.py  tasks.py
tests/: test_service.py  test_tasks.py
